New Glade files

--- a/Converter/converter.glade
+++ b/Converter/converter.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkAdjustment" id="adjustment2b">
@@ -18,6 +18,9 @@
   </object>
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
+    <child type="titlebar">
+      <placeholder/>
+    </child>
     <child>
       <object class="GtkBox" id="main_box">
         <property name="visible">True</property>
@@ -98,7 +101,7 @@
                 <property name="adjustment">adjustment2b</property>
                 <property name="climb_rate">1</property>
                 <property name="numeric">True</property>
-                <property name="value">2</property>
+                <property name="value">10</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -114,7 +117,7 @@
                 <property name="adjustment">adjustment3b</property>
                 <property name="climb_rate">1</property>
                 <property name="numeric">True</property>
-                <property name="value">2</property>
+                <property name="value">10</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
