Rename labels in PI generator

--- a/PI-Generator/generator.glade
+++ b/PI-Generator/generator.glade
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
-  <requires lib="gtk+" version="3.12"/>
+  <requires lib="gtk+" version="3.12" />
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
+    <child type="titlebar">
+      <placeholder />
+    </child>
     <child>
       <object class="GtkBox" id="main_box">
         <property name="visible">True</property>
@@ -32,7 +35,7 @@
             <property name="row_homogeneous">True</property>
             <property name="column_homogeneous">True</property>
             <child>
-              <object class="GtkLabel" id="label_A1">
+              <object class="GtkLabel" id="pi_name_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">PI</property>
@@ -43,7 +46,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label_B1">
+              <object class="GtkLabel" id="pi_value_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
@@ -53,7 +56,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label_A2">
+              <object class="GtkLabel" id="error_name_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">result error</property>
@@ -64,7 +67,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label_B2">
+              <object class="GtkLabel" id="error_value_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
