--- a/Converter/converter.glade
+++ b/Converter/converter.glade
@@ -2,14 +2,14 @@
 <!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
-  <object class="GtkAdjustment" id="adjustment2b">
+  <object class="GtkAdjustment" id="base_result_adjustment">
     <property name="lower">2</property>
     <property name="upper">16</property>
     <property name="value">2</property>
     <property name="step_increment">1</property>
     <property name="page_increment">1</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment3b">
+  <object class="GtkAdjustment" id="base_value_adjustment">
     <property name="lower">2</property>
     <property name="upper">16</property>
     <property name="value">2</property>
@@ -48,7 +48,7 @@
             <property name="row_homogeneous">True</property>
             <property name="column_homogeneous">True</property>
             <child>
-              <object class="GtkLabel" id="label_A1">
+              <object class="GtkLabel" id="value_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">VALUE</property>
@@ -59,7 +59,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label_A2">
+              <object class="GtkLabel" id="base_value_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">BASE OF VALUE</property>
@@ -70,7 +70,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label_A3">
+              <object class="GtkLabel" id="base_result_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">BASE OF RESULT</property>
@@ -81,7 +81,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="entry_B1">
+              <object class="GtkEntry" id="value_entry">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="caps_lock_warning">False</property>
@@ -93,12 +93,12 @@
               </packing>
             </child>
             <child>
-              <object class="GtkSpinButton" id="spinbutton_B2">
+              <object class="GtkSpinButton" id="base_value_spinbutton">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="caps_lock_warning">False</property>
                 <property name="input_purpose">number</property>
-                <property name="adjustment">adjustment2b</property>
+                <property name="adjustment">base_value_adjustment</property>
                 <property name="climb_rate">1</property>
                 <property name="numeric">True</property>
                 <property name="value">10</property>
@@ -109,12 +109,12 @@
               </packing>
             </child>
             <child>
-              <object class="GtkSpinButton" id="spinbutton_B3">
+              <object class="GtkSpinButton" id="base_result_spinbutton">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="caps_lock_warning">False</property>
                 <property name="input_purpose">number</property>
-                <property name="adjustment">adjustment3b</property>
+                <property name="adjustment">base_result_adjustment</property>
                 <property name="climb_rate">1</property>
                 <property name="numeric">True</property>
                 <property name="value">10</property>
