--- a/Converter/converter.glade
+++ b/Converter/converter.glade
@@ -163,7 +163,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="exit_button">
+              <object class="GtkButton" id="close_button">
                 <property name="label" translatable="yes">CLOSE</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
