--- a/PI-Generator/generator.glade
+++ b/PI-Generator/generator.glade
@@ -103,7 +103,7 @@
             <property name="can_focus">False</property>
             <property name="homogeneous">True</property>
             <child>
-              <object class="GtkButton" id="continue_button">
+              <object class="GtkButton" id="generate_button">
                 <property name="label" translatable="yes">GENERATE!</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -116,7 +116,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="exit_button">
+              <object class="GtkButton" id="close_button">
                 <property name="label" translatable="yes">CLOSE</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
