--- a/Lotto/lotto.glade
+++ b/Lotto/lotto.glade
@@ -722,7 +722,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkButton" id="draw_button">
+          <object class="GtkButton" id="run_button">
             <property name="label" translatable="yes">RUN</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
